[tool.poetry]
name = "botc-json2pdf"
version = "0.3.5"
description = ""
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
packages = [{include = "botcpdf"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
weasyprint = "^58.1"
pypdf = "^3.16.4"
pdf2image = "^1.16.3"
requests = "^2.28.2"
pytz = "^2023.3"
aws-lambda-powertools = "^2.26.0"
jmespath = "^1.0.1"
boto3 = "^1.28.66"
requests-toolbelt = "^1.0.0"
click = "^8.1.7"
discord-webhook = "^1.3.0"
aws-xray-sdk = "^2.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
pylint = "^3.0.1"
types-requests = "^2.31.0.10"
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
