[tool.poetry]
name = "botc-json2pdf"
version = "0.3.6"
description = ""
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
packages = [{include = "botcpdf"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
weasyprint = "^58.1"
pypdf = "^4.2.0"
pdf2image = "^1.16.3"
requests = "^2.28.2"
pytz = "^2024.1"
aws-lambda-powertools = "^2.36.0"
jmespath = "^1.0.1"
boto3 = "^1.34.79"
requests-toolbelt = "^1.0.0"
click = "^8.1.7"
discord-webhook = "^1.3.0"
aws-xray-sdk = "^2.13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
types-requests = "^2.31.0.20240406"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
