[tool.poetry]
name = "botc-json2pdf"
version = "0.3.6"
description = ""
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
packages = [{include = "botcpdf"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
weasyprint = "^58.1"
pypdf = "^4.2.0"
pdf2image = "^1.16.3"
requests = "^2.32.3"
pytz = "^2024.1"
aws-lambda-powertools = "^2.39.1"
jmespath = "^1.0.1"
boto3 = "^1.34.133"
requests-toolbelt = "^1.0.0"
click = "^8.1.7"
discord-webhook = "^1.3.0"
aws-xray-sdk = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pylint = "^3.2.4"
types-requests = "^2.32.0.20240622"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
